--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="#"><i class="fab fa-linkedin"></i></a>
               </div>
               <div class="mt-4">
-                <a href="resume.pdf" class="btn btn-primary" download>
+                <a href="Nalubowa_Kemisha_Resume.pdf" class="btn btn-primary" download>
                   <i class="fa-solid fa-file-pdf me-2"></i> Resume
                 </a>
               </div>
@@ -152,7 +152,7 @@
     <section id="contact" class="bg-light">
       <div class="container">
         <h2>Contact Me</h2>
-        <form>
+        <form action="https://formspree.io/f/mnqwrbza" method="POST">
           <div class="mb-3">
             <label class="form-label">Name</label>
             <input type="text" class="form-control" placeholder="Your name">
