--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="card h-100">
-              <img src="./images/flask_api.jpg" alt="Flask API" class="card-img-top">
+              <img src="./images/flask.jpg" alt="Flask API" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Flask API</h5>
                 <p class="card-text">A RESTful API built using Flask with full CRUD capabilities.</p>
